@@ -36,6 +36,7 @@ Version 1.3.8+svn:
      * Triple Blitz to Alirok Marsh
    * minimum number of turns reduced to 1
    * new option to allow female leaders by default instead of male leaders
+   * fixed a crash if the client recieves invalid utf-8
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
